--- a/main.css
+++ b/main.css
@@ -199,30 +199,26 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .card {
-	background-color: antiquewhite;
 	border: 1px solid rgba(0,0,0,0.125);
 }
 
-
-
-.card>div.img {
+.img {
     height: 55%;
-    background-color: brown;
+    display: flex;
 }
 .card>div.text {
     height: 45%;
-    background-color:dodgerblue;
+    border-top: 1px solid rgba(0,0,0,0.125);
+    
 }
 
 .img-left {
     width: 65%;
-    background-color: aqua;
-    display: inline-block;
+    border-right: 1px solid rgba(0,0,0,0.125);
+    
 }
 .img-right {
     width: 35%;
-    background-color: blueviolet;
-    display: inline-block;
 }
 
 .img-left>img {
