finished text block for top categories

--- a/main.css
+++ b/main.css
@@ -133,7 +133,6 @@ span.currency {
 
 .active-menu {
 	border-top: 1px solid #0ea9ef;
-    outline
 }
 
 .search,
@@ -206,7 +205,8 @@ h1, h2, h3, h4, h5, h6 {
     height: 55%;
     display: flex;
 }
-.card>div.text {
+.text {
+    padding: 15px;
     height: 45%;
     border-top: 1px solid rgba(0,0,0,0.125);
     
@@ -232,4 +232,48 @@ h1, h2, h3, h4, h5, h6 {
 .img-right>div>img {
     margin: 3px 0px;
     width: 100%;
+}
+
+.text>h4 {
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.text>p {
+    font-size: 14px;
+    font-weight: 400;
+    margin-bottom: 16px;
+    color: #9da9b9;
+    text-align: center;
+}
+
+.btn {
+    border-radius: 18px;
+    border: 1px solid #0da9ef;
+    padding: 0px 18px;
+    height: 36px;
+}
+
+a.btn:hover {
+    background-color: #0da9ef;
+}
+
+a.btn:hover>p {
+    color: white;
+}
+.btn>p {
+    margin: 0;
+    padding: 0;
+    font-size: 12px;
+    font-weight: 500;
+    margin-top: 8px;
+    color: #0da9ef;
+}
+
+.btn-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
