--- a/main.css
+++ b/main.css
@@ -315,24 +315,48 @@ a.all-categories:hover>p {
 
 .limited-offer {
     background-color: yellow;
-    padding: 10px;
+    padding: 15px;
+	margin: 0 10%;
 }
 .limited {
     background-color: aqua;
     height: 50%;
     display: flex;
-    padding: 15px;
+	justify-content: center;
+    
+}
+
+.limited-col {
+	width: 50%;
+	padding: 15px;
+}
+
+.collection-col {
+	width: 100%;
+	padding: 15px;
 }
 
 .countdown-container {
-    background-color: dodgerblue;
+    background-color: #f5f5f5;
+	border-radius: 8px;
 }
 
 .limited-img {
-    background-color: darksalmon;
+	height: 400px;
+	background-image: url(images/glasses.jpg);
+	background-size: auto;
+	border-radius: 8px;
 }
 
 .old {
     background-color: blueviolet;
     height: 50%;
+	display: flex;
+	
+}
+.collection {
+	width: 100%;
+	height: 400px;
+	background-color: #f5f5f5;
+	border-radius: 8px;
 }
