--- a/main.css
+++ b/main.css
@@ -340,8 +340,73 @@ a.all-categories:hover>p {
 	height: 100%;
     background-color: #f5f5f5;
 	border-radius: 8px;
+	padding: 15px;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.status-bar {
+	padding: 0px 10px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.status-bar>p {
+	margin-bottom: 0px;
+}
+.status-bar>p:first-child {
+	color: #ff5252;
+	font-size: 14px;
+	font-weight: 500;
+	letter-spacing: .07em;
+}
+.limited-text {
+	margin-top: 15px;
+}
+
+.limited-text>h {
+	color: #374250;
+}
+.limited-text>h3 {
+	font-size: 30px;
+	line-height: 1.2;
+}
+.limited-text>h2 {
+	font-size: 60px;
+	line-height: 1.15;
+	font-weight: bold;
+}
+.limited-text>h4 {
+	font-size: 24px;
+	line-height: 1.25;
+	margin-bottom: 20px;
+}
+
+.data-date-time {
+	display: flex;
+	
+}
+.item>:first-child {
+	border: 1px solid #e1e7ec;
+	border-radius: 5px;
+	font-size: 22px;
+	margin: 7px;
+	height: 48px;
+	width: 48px;
+}
+
+p.days {
+	margin-top: 13px;
+}
+
+.item>p {
+	margin-bottom: 0px;
+	font-size: 12px;
+}
+.item {
+	text-align: center;
+	
 }
 
 .limited-img {
@@ -371,9 +436,21 @@ a.all-categories:hover>p {
 
 .limited-text {
 	display: flex;
-	justify-content: flex-start;
+	flex-direction: column;	
+    align-items: center;
 }
 
 .offer-button {
-	
+	margin: 30px 0px;
+	background-color: #0da9ef;
+}
+
+.offer-button>p {
+    color: white;
+}
+a.offer-button:hover {
+    background-color: #0a87bf
+}
+a.offer-button:hover>p {
+    color: white;
 }
